--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ matplotlib
 plotly-express
 seaborn
 scikit-learn
-gradio
-joblib
 statsmodels
 scipy
 numpy
 catboost
 xgboost
+ydata-profiling
+#gradio
+
